--- a/sk2.html
+++ b/sk2.html
@@ -4843,7 +4843,7 @@ CONFIGS&rarr;
 UNITSX&rarr;		JPQ #
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=126 doc_page=276 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=126 doc_page=276 type=code]
 [Page header: "LMH Y3HT 001"]
 
 SQ60A&rarr;		CSQ<sub>6</sub><sub>0</sub>
@@ -4898,7 +4898,7 @@ SQ60IRR&rarr;
 		RSX <sub>S</sub><sub>C</sub><sub>&alpha;</sub> E
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=127 doc_page=277 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=127 doc_page=277 type=code]
 [Page header: "LMH Y3HT 002"]
 
 		SXL <sub>S</sub><sub>C</sub><sub>&alpha;</sub> LACE
@@ -4954,7 +4954,7 @@ S1NULL1&rarr;
 		<sup>1</sup>ADX <sub>S</sub><sub>1</sub><sub>&gamma;</sub> S1DISPLAY
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=128 doc_page=278 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=128 doc_page=278 type=code]
 [Page header: "LMH Y3HT 003"]
 
 		<sup>2</sup>ADX <sub>S</sub><sub>1</sub><sub>x</sub> S1DISPLAY
@@ -5010,7 +5010,7 @@ CMAG&rarr;		<sup>1</sup>STE CMEXIT
 		LDA 200034
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=129 doc_page=279 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=129 doc_page=279 type=code]
 [Page header: "LMH Y3HT 004"]
 
 		STA SCSZ
@@ -5065,7 +5065,7 @@ CMAG3&rarr;		LDA { CMMINRAD}	**IS RAD TINY?
 		MUL CMRAD	**ARCLENGTH/2TH
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=130 doc_page=280 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=130 doc_page=280 type=code]
 [Page header: "LMH Y3HT 005"]
 
 		STA CMTS
@@ -5120,7 +5120,7 @@ CMGNL1B&rarr;
 		JOV CMGNL1D
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=131 doc_page=281 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=131 doc_page=281 type=code]
 [Page header: "LMH Y3HT 006"]
 
 		STA CMTT	**VARIABLE PART
@@ -5175,7 +5175,7 @@ CMGNL1E&rarr;
 		SKZ <sub>1</sub><sub>.</sub><sub>1</sub> CMTU
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=132 doc_page=282 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=132 doc_page=282 type=code]
 [Page header: "LMH Y3HT 007"]
 
 		<sup>1</sup>COM A
@@ -5230,7 +5230,7 @@ CMGNL1D&rarr;
 		SAB { 18.,}	[guessing about 8, maybe 0?]
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=133 doc_page=283 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=133 doc_page=283 type=code]
 [Page header: "LMH Y3HT 010"]
 
 		STA CMTS
@@ -5284,7 +5284,7 @@ CMGNL4D&rarr;
 		INX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> 1
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=134 doc_page=284 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=134 doc_page=284 type=code]
 [Page header: "LMH Y3HT 011"]
 
 		SKN <sub>2</sub><sub>.</sub><sub>1</sub> B
@@ -5339,7 +5339,7 @@ CMGNL6A&rarr;
 		DPX A
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=135 doc_page=285 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=135 doc_page=285 type=code]
 [Page header: "LMH Y3HT 012"]
 
 		STA <sub>C</sub><sub>M</sub><sub>&beta;</sub> CMDRAWA-1
@@ -5394,7 +5394,7 @@ CMALLON&rarr;
 		STA CMDRAWA
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=136 doc_page=286 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=136 doc_page=286 type=code]
 [Page header: "LMH Y3HT 013"]
 
 		REX <sub>C</sub><sub>M</sub><sub>&beta;</sub> 1
@@ -5448,7 +5448,7 @@ PLIESCIRCLE&rarr;
 		LDC <sub>C</sub><sub>M</sub><sub>&alpha;</sub> CMDRAWA-1
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=137 doc_page=287 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=137 doc_page=287 type=code]
 [Page header: "LMH Y3HT 014"]
 
 		LDD CMANG
@@ -5502,7 +5502,7 @@ CMDRAWS&rarr;
 		0
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=138 doc_page=288 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=138 doc_page=288 type=code]
 [Page header: "LMH Y3HT 015"]
 
 		0
@@ -5557,7 +5557,7 @@ LMAG1&rarr;		LDA LMDX
 		LDA LMDY
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=139 doc_page=289 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=139 doc_page=289 type=code]
 [Page header: "LMH Y3HT 016"]
 
 		JPA LMAG1A
@@ -5611,7 +5611,7 @@ LMAG1N&rarr;		HDIF|SCCEN+1,LMSTART+1&rarr;LMTS	**BOTH OFF
 		COM B
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=140 doc_page=290 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=140 doc_page=290 type=code]
 [Page header: "LMH Y3HT 017"]
 
 		<sup>1</sup>STB LMSST
@@ -5666,7 +5666,282 @@ LMAG4&rarr;		HDIF|LMSTART+1,SCCEN+1	**X&Delta;Y-Y&Delta;X
 		<sup>1</sup>STA LMSKEY
 
 <hr>
-[meta file_name=102726903-05-02-acc.pdf pdf_page=141 doc_page=291 type=main]
+[meta file_name=102726903-05-02-acc.pdf pdf_page=141 doc_page=291 type=code]
 [Page header: "LMH Y3HT 020"]
+
+LMAG5&rarr;		SCNORM|LMSTART=LMSST&rarr;LMAG5A
+		SCNORM|LMSTART+1&rarr;1=<sup>2</sup><sup>2</sup> LMSST-LMAG5A
+		SCNORM|LMENDLMSEND&rarr;LMAG5B
+		SCNORM|LMEND+1&rarr;1=<sup>2</sup><sup>2</sup> LMSEND-LMAG5B
+		JPQ LMDRAW	**BOTH ON
+LMAG5A&rarr;		SCNORM|LMEND=LMSEND&rarr;LMAG5C
+		SCNORM|LMEND+1&rarr;1=<sup>2</sup><sup>2</sup> LMSEND&rarr;LMAG5C
+		**END ON, START OFF
+		hJPQ LMSLR
+		NEARCR|LMSTART&rarr;LMEND,LMSTART+1&rarr;LMEND+1= A
+		hJPQ LMKEY
+		STA LMSST
+		JPQ LMDRAW
+LMAG5B&rarr;		hJPQ LMSLR
+LMAG5CA&rarr;
+		NEARCR|LMEND&rarr;LMSTART,LMEND+1&rarr;LMSTART+1= A
+		hJPQ LMKEY
+		STA LMSEND
+		JPQ LMDRAW
+LMAG5C&rarr;		HDIF|LMSTART,SCCEN&rarr;LMXSR
+		HDIF|LMSTART+1,SCCEN+1&rarr;LMYSR
+		HDIF|LMEND,SCCEN&rarr;LMEXR
+		HDIF|LMEND+1,SCCEN+1&rarr;LMEYR
+		SKZ <sub>4</sub><sub>.</sub><sub>9</sub> LMTT
+		JPQ LMAG5CB
+		LDA LMXSR
+		SUB LMYSR
+		SCA {-1,}
+		STA LMTS
+		LDA LMEXR
+		SUB LMEYR
+		JPQ LMAG5CC
+LMAG5CB&rarr;
+		LDA LMXSR
+		ADD LMYSR
+		SCA {-1,}
+		STA LMTS
+		LDA LMEXR
+		ADD LMEYR
+LMAG5CC&rarr;
+		SCA {-1,}
+		MUL LMTS
+		NAB { 0}
+		JNA #+2
+		JPQ LMAGEXIT
+		hJPQ LMSLR
+		NEARCR|LMSTART&rarr;LMEND,LMSTART+1&rarr;LMEND+1= A
+		hJPQ LMKEY
+		STA LMSST
+		JPQ LMAG5CA
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=142 doc_page=292 type=code]
+[Page header: "LMH Y3HT 021"]
+
+		**LINE SLOPE SUBROUTINE
+LMSLR&rarr;		<sup>1</sup>STE LMSLRX
+		DUALNORM|LMSTART&rarr;LMEND,LMSTART+1&rarr;LMEND+1=LMSL
+		[blank line]
+LMSLRT&rarr;		JPQ #
+		**SUBROUTINE TO FIND AH EDGE POINT [sic]
+LMKEY&rarr;		<sup>1</sup>STE LMKEYEX
+		STA LMKCR	**IN, A POINT IN LMSKEY
+		<sup>2</sup><sup>0</sup>SUB LMSKEY	**SLOPE IN LMSL
+		<sup>2</sup><sup>0</sup>SAB {-1,0,,-1,0}	**1/2 CORNER DIST
+		<sup>1</sup><sup>7</sup>MUL LMSL
+		<sup>2</sup><sup>0</sup>DIV LMSL	**OFFSETS &Delta;Y,,&Delta;X
+		STA B
+		<sup>2</sup><sup>0</sup>JOV LMKEY1
+		<sup>1</sup><sup>7</sup>ADD LMSKEY
+		<sup>2</sup><sup>0</sup>JOV LMKEY2
+		<sup>2</sup><sup>0</sup>ADD B
+		<sup>2</sup><sup>1</sup>JOV LMKEYT+3
+		<sup>2</sup>LDA LMKCR
+		<sup>1</sup><sup>7</sup>LDA A	**USE SIDE ENTRY
+LMKEYEX&rarr;
+		JPQ #
+LMKEY1&rarr;		<sup>1</sup>JOV #+2
+		JPQ LMKEYT
+		h<sup>2</sup><sup>1</sup>JOV BADOV
+		JPQ LMKEYS
+LMKEY2&rarr;		<sup>1</sup>JOV LMKEYS+1
+		JPQ LMKEYT+2
+LMKEYS&rarr;		<sup>1</sup><sup>7</sup>ADD LMSKEY	**MUST USE SIDE
+		h<sup>2</sup><sup>1</sup>JOV BADOV	**ENTRY
+		<sup>2</sup><sup>0</sup>ADD B
+		h<sup>2</sup><sup>1</sup>JOV BADOV
+		JPQ LMKEYEX-2
+LMKEYT&rarr;		<sup>1</sup><sup>7</sup>ADD LMSKEY	**MUST USE
+		h<sup>1</sup>JOV BADOV	**TOP OR BOTTOM
+		<sup>2</sup><sup>0</sup>ADD B	**ENTRY
+		h<sup>1</sup>JOV BADOV
+		<sup>2</sup><sup>2</sup>LDA LMKCR
+		JPQ LMKEYEX-1
+LMDRAW&rarr;		SKN PLOTIT
+		JPQ LMDRAW1
+		LDA LMSST
+		LDB LMSEND
+		hJPQ PLOTLINE
+		JPQ LMAGEXIT
+LMDRAW1&rarr;
+		LDA LMSEND
+		<sup>2</sup><sup>0</sup>SUB LMSST
+		<sup>2</sup><sup>0</sup>SCA {-2,-2,}
+		STA LMSL
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=143 doc_page=293 type=code]
+[Page header: "LMH Y3HT 022"]
+
+		<sup>2</sup><sup>0</sup>MUL A
+		<sup>2</sup>EXA B
+		ADD B
+		<sup>1</sup><sup>6</sup>LDB A
+		SCB {-9.,}
+		hJPQ SQRT
+		STA LMTS
+		<sup>2</sup><sup>2</sup>STA LMTS	**1/4 LENGTH
+		<sup>2</sup><sup>0</sup>SCA {-6,-6}
+		<sup>2</sup><sup>1</sup>MUL { 377600,,0}
+		<sup>2</sup><sup>2</sup>STA LMCNT	**N-1 SPOTS
+LMDRAW1A&rarr;
+		LDA LMSL
+		LDB LMSL
+		<sup>2</sup><sup>0</sup>SCB {-18.,-18.,}
+		<sup>2</sup><sup>0</sup>DIV LMTS
+		<sup>2</sup><sup>0</sup>SAB {-9.,-9.,}
+		<sup>1</sup>JPA #+3
+		<sup>1</sup>JNA #+5
+		JPQ #+6
+		SKZ <sub>2</sub><sub>.</sub><sub>9</sub> B
+		<sup>1</sup>ADD { 1}
+		JPQ #+3
+		SKN <sub>2</sub><sub>.</sub><sub>9</sub> B
+		<sup>1</sup>SUB { 1}
+		<sup>2</sup><sup>1</sup>JPA #+3
+		<sup>2</sup><sup>1</sup>JNA #+5
+		JPQ #+6
+		SKZ <sub>4</sub><sub>.</sub><sub>9</sub> B
+		<sup>2</sup><sup>2</sup>ADD { 1}
+		JPQ #+3
+		SKN <sub>4</sub><sub>.</sub><sub>9</sub> B
+LMDRAW1B&rarr;
+		<sup>2</sup><sup>2</sup>SUB { 1}
+		STA LMINC	**INCREMENTS
+		RSX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> NDISP
+		AUX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> LMCNT
+		INX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> 1
+		SXL <sub>C</sub><sub>M</sub><sub>&alpha;</sub> DISPLAYFILESIZE
+		FULL&equiv;CM&alpha;&rarr;LMAGEXIT
+		DPX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> LMTS
+		INX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> DISPLAY FILE-1
+		<sup>1</sup>DPX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> LMDRAWLOOP
+		RSX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> LMCNT
+		<sup>1</sup>REX <sub>C</sub><sub>M</sub><sub>&alpha;</sub><sub>|</sub><sub>C</sub><sub>M</sub><sub>&alpha;</sub>
+		LDA LMSST
+		LDB {-377,,-377}
+		MOVE|LMNAME&rarr;CMNAME1
+		LDC CMNAME1
+		INS C
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=144 doc_page=294 type=code]
+[Page header: "LMH Y3HT 023"]
+
+LMDRAWLOOP&rarr;
+		STC <sub>C</sub><sub>M</sub><sub>&alpha;</sub> 0
+		<sup>2</sup><sup>0</sup> ADD LMINC
+		<sup>+</sup><sup>1</sup>JNX <sub>C</sub><sub>M</sub><sub>&alpha;</sub> LMDRAWLOOP-2
+		MOVE|LMTS&rarr;NDISP
+LMAGEXIT&rarr;
+		JPQ #
+SQUARE ROOT BY HPP&rarr;
+		<sup>1</sup>STE #+56	**IN EXIT
+		LDD {-0}
+		AOP 66000	**NAB		[Handwritten at the left margin: "202343 ->"]
+		STD #+61-3	**EXPONENT	[Handwritten at the left margin: "344 ->"]
+		MKZ <sub>3</sub><sub>.</sub><sub>8</sub>#+53-4
+		JPA #+12-5	**N>0
+		MKN <sub>3</sub><sub>.</sub><sub>8</sub>#+53-6	**N≤0
+		COM A
+		JPA #+2	**N<0
+		JPQ #+55-11	**N=0
+		STA #+57-12	**IN N		[Handwritten at the left margin: "202353"]
+		SCA {-3,}
+		SUB {19461699408.}	**N/8-.56641
+		MUL #+57-15	**&times;N
+		SKN MKN CYR <sub>4</sub><sub>.</sub><sub>1</sub>#+61-16**HALVE EXPONENT [Handwritten: left margin: "->", right margin: "<-"; syntax, three instruction codes?]
+		JPQ #+24-17**IF EXP ODD	[Handwritten at the rigt margin: arrow pointing right and then down]
+		MUL {-26415202030.}** - .7689	[check the numbers]
+		SCA { 1,}
+		ADD { 11003700211.}**+.32025	[check the numbers]
+		JPQ #+30-23** TO ITERATION
+		MUL {-18703036386.}**- .5433	[Handwritten at the left margin: "->"]
+		ADD { 3890553174.}**+.11323
+		SCA { 1,}
+		MKZ CYR <sub>1</sub><sub>.</sub><sub>1</sub>#+57-27**HALVE N [Handwritten at the right margin: "232420"]
+		**THE APPROX CAME FROM ROLLO SILVER
+		**NOW WE DO NEUTON'S METHOD TWICE [sic]
+		STA #+60-30**APPROX(X1) TO 9 BITS
+		LDA #+57-31
+		DIV #+60-32** N/X1
+		AOP 67000**ADD D
+		JOV #+4	[Start of hand-drawn block on the left]
+		SKN CYR <sub>4</sub><sub>.</sub><sub>9</sub> A**X1 was ≤N
+		COM A** NEW X1 ≥1	[Handwritten: "037,4"]
+		SKU MKZ <sub>4</sub><sub>.</sub><sub>9</sub> A
+		SCA {-1,}**2X1&rarr;X1 [End of the hand-drawn block; handwritten at the left margin: "202401"]
+		STA #+60-41** X1 TO 10 BITS
+		LDA #+57-42
+		DIV #+60-43** N/X1
+		AOP 67000
+		JOV #+4
+		SKN CYR <sub>4</sub><sub>.</sub><sub>9</sub> A
+		COM A
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=145 doc_page=295 type=code]
+[Page header: "LMH Y3HT 024"]
+
+		SKU MKZ <sub>4</sub><sub>.</sub><sub>9</sub> A
+		SAB {-1,}**ROOT TO 36 BITS IN A
+		SAB #+61-52**PROPER EXPONENT [Handwritten on the right: "<- 202422"
+		JPQ #+3
+		COM B**FALLS THRU IF N<0
+		COM A
+		JPQ 0**EXIT
+		0**N
+		111**APPROX(X1)
+		222**EXPONENT
+		**END OF SQUARE ROOT SUBROUTINE 4AUG60 HPP
+CACT&rarr;		<sup>1</sup>STE ACTEX
+		STA ACTX
+		STB ACTY
+		JPA ACTP1
+		JNA ACTN1
+		LDA ACTY
+		JNA #+4
+		JPA #+5
+		LDA { 0}
+		JPQ ACTEX
+		LDA { 600,}
+		JPQ ACTEX
+		LDA { 200,}
+		JPQ ACTEX
+ACTN1&rarr;		COM A
+		LDC { 400,}
+		STC ACTANG
+		JPQ #+2
+ACTP1&rarr;		DPX ACTANG
+		EXA B	**MAG OF X IN B
+		JPA ACTP2
+		JNA ACTN2
+		LDA ACTANG
+		JPQ ACTEX
+ACTN2&rarr;		COM A
+ACTP2&rarr;		SUB B
+		JPA ACTP3	**Y BIGGER
+		JNA ACTN3	**X BIGGER
+		LDA { 100,}
+		SKZ <sub>4</sub><sub>.</sub><sub>9</sub> ACTY
+		COM A
+		SKZ <sub>4</sub><sub>.</sub><sub>9</sub> ACTX
+		COM A
+		ADD ACTANG
+		JPQ ACTEX
+ACTP3&rarr;		LDA ACTY
+		JPA #+3
+		LDC { 600,}
+		JPQ #+2
+
+<hr>
+[meta file_name=102726903-05-02-acc.pdf pdf_page=146 doc_page=296 type=code]
+[Page header: "LMH Y3HT 025"]
 
 </code></pre></body></html>
