Use hbar for both text and HTML.

--- a/sk2.html
+++ b/sk2.html
@@ -6213,7 +6213,7 @@ PLPPBI&rarr;		hTSD PLPWA
 		JPQ PLPIT3
 PLPIT&rarr;		SKN TRBUSY
 		RXF <sub>5</sub><sub>7</sub> TRACK
-		<span style='text-decoration:overline;'>h</span><sup>1</sup>JNX <sub>P</sub><sub>L</sub><sub>P</sub> PLPIT
+		ħ<sup>1</sup>JNX <sub>P</sub><sub>L</sub><sub>P</sub> PLPIT
 		<sup>1</sup><sup>3</sup>RSX <sub>P</sub><sub>L</sub><sub>P</sub> PLITWA	**BLKS LEFT
 		h<sup>-</sup><sup>1</sup>JPX <sub>P</sub><sub>L</sub><sub>P</sub> PLPIT3
 
